--- a/index.html
+++ b/index.html
@@ -1,230 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Screenshot by tanziran</title>
 
-        <title>Screenshot by tanziran</title>
+  <!-- OpenGraph metadata unchanged -->
+  <meta property="og:image" content="https://tanziran.github.io/Killer-Jeff-for-html/lightshot.png">
+  <meta name="twitter:image:src" content="https://tanziran.github.io/Killer-Jeff-for-html/lightshot.png">
 
-        <meta property="og:title" content="Screenshot">
-        <meta property="og:url" content="https://">
-        <meta property="og:site_name" content="tanziran">
-        <meta property="og:image" content="https://tanziran.github.io/Killer-Jeff-for-html/lightshot.png">
-        <meta property="og:description" content="Captured with tanziran">
-        <meta property="og:type" content="website">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&display=swap" rel="stylesheet">
 
-        <meta name="twitter:card" content="photo">
-        <meta name="twitter:title" content="Screenshot">
-        <meta name="twitter:site" content="@tanziran">
-        <meta name="twitter:description" content="Captured with tanziran">
-        <meta name="twitter:image:src" content="https://tanziran.github.io/Killer-Jeff-for-html/lightshot.png">
+  <style>
+    body {
+      margin: 0;
+      background-color: black;
+      overflow: hidden;
+    }
 
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&display=swap" rel="stylesheet">
+    .overlay, .scare {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100vw;
+    }
 
-        <style type="text/css">
-            p {
-                margin: 0;
-            }
+    .overlay {
+      background-color: #f5f6fa;
+      z-index: 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      font-family: 'Inter', sans-serif;
+    }
 
-            *, *::before, *::after {
-                box-sizing: border-box;
-            }
+    .overlay-body {
+      text-align: center;
+      max-width: 512px;
+    }
 
-            .overlay, .scare {
-                position: fixed;
+    .overlay-button {
+      padding: 12px 24px;
+      font-size: 16px;
+      margin: 10px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
 
-                top: 0;
-                left: 0;
+    #accept-button {
+      background: purple;
+      color: white;
+    }
 
-                height: 100vh;
-                width: 100vw;
-            }
+    #decline-button {
+      background: white;
+      color: purple;
+      border: 2px solid purple;
+    }
 
-            p.overlay-title {
-                font-size: 24px;
-                font-weight: 900;
-                color: black;
-                line-height: 1;
+    .scare {
+      display: none;
+      z-index: 1;
+    }
 
-                margin-bottom: 16px;
-            }
+    #flash-images img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      display: none;
+    }
 
-            .overlay-button {
-                display: inline-flex;
-                align-items: center;
+    #flash-audio {
+      display: none;
+    }
+  </style>
+</head>
 
-                height: 40px;
+<body>
+  <!-- Consent Overlay -->
+  <div id="overlay" class="overlay">
+    <div class="overlay-body">
+      <p><strong>Cookies and scary content warning</strong></p>
+      <p>This site may cause <b>photosensitive reactions</b>.</p>
+      <div>
+        <button id="accept-button" class="overlay-button">Accept</button>
+        <button id="decline-button" class="overlay-button">Decline</button>
+      </div>
+    </div>
+  </div>
 
-                padding-right: 24px;
-                padding-left: 24px;
+  <!-- Flashing Scare Images -->
+  <div class="scare" id="flash-images">
+    <img src="https://i.imgur.com/wP3cGuw.jpeg">
+    <img src="https://i.imgur.com/0vJjNyP.jpg">
+    <img src="https://i.imgur.com/bYz6taE.jpg">
+    <!-- Add more images as needed -->
+  </div>
 
-                font-size: 16px;
-                font-weight: 500;
-                line-height: 1;
+  <!-- Scary Audio -->
+  <audio id="flash-audio" src="./scream.mp3" preload="auto"></audio>
 
-                border-radius: 4px;
+  <script>
+    const overlay = document.getElementById('overlay');
+    const scare = document.getElementById('flash-images');
+    const audio = document.getElementById('flash-audio');
+    const images = scare.querySelectorAll('img');
 
-                margin: 4px;
+    const startJumpscare = () => {
+      overlay.style.display = 'none';
+      scare.style.display = 'block';
 
-                cursor: pointer;
-            }
+      // Play audio
+      audio.play();
 
-            .overlay-buttons-wrapper {
-                margin: 24px -8px -8px;
-            }
+      // Enter fullscreen
+      const el = document.documentElement;
+      if (el.requestFullscreen) el.requestFullscreen();
 
-            #accept-button {
-                background-color: rgb(132, 94, 194);
+      // Flash images
+      let index = 0;
+      setInterval(() => {
+        images.forEach(img => img.style.display = 'none');
+        images[index].style.display = 'block';
+        index = (index + 1) % images.length;
+      }, 100); // change image every 100ms
+    };
 
-                color: white;
-            }
-
-            #decline-button {
-                color: rgb(132, 94, 194);
-
-                border: 2px solid rgb(132, 94, 194);
-            }
-
-            p.overlay-description {
-                font-size: 16px;
-                font-weight: 400;
-                color: rgba(0, 0, 0, 0.5);
-                line-height: 1.25;
-
-                margin-bottom: 16px;
-            }
-
-            a.overlay-link {
-                display: inline-block;
-
-                text-decoration: none;
-
-                font-size: 16px;
-                font-weight: 500;
-                color: rgb(132, 94, 194);
-                line-height: 1;
-
-                position: relative;
-
-                margin-top: 16px;
-            }
-
-            a.overlay-link::before {
-                position: absolute;
-
-                content: "";
-
-                height: calc(50% + 4px);
-                width: calc(100% + 8px);
-
-                bottom: -4px;
-                left: -4px;
-
-                background-color: rgba(132, 94, 194, 0.1);
-            }
-
-            .overlay-body {
-                max-width: 512px;
-
-                text-align: center;
-
-                font-family: "Inter", sans-serif;
-            }
-
-            .overlay[hidden] {
-                display: none;
-            }
-
-            .overlay {
-                z-index: 2;
-
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                background-color: #f5f6fa;
-
-                padding-right: 24px;
-                padding-left: 24px;
-            }
-
-            .scare {
-                z-index: 1;
-            }
-
-            video#video {
-                height: 100%;
-                width: 100%;
-
-                object-fit: cover;
-            }
-
-            video#video::-webkit-media-controls-enclosure {
-                display:none !important;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="overlay" class="overlay">
-            <div class="overlay-body">
-                <p class="overlay-title">Cookies and user-generated content</p>
-
-                <p class="overlay-description">This website uses cookies to offer you the most relevant information and
-                                               better understand how you use this website. Please accept cookies for
-                                               optimal performance.</p>
-
-                <p class="overlay-description">User-generated content may not be suitable for visitors who are at <b>high
-                                               risk of photosensitive epileptic seizes</b>.</p>
-
-                <div class="overlay-buttons-wrapper">
-                    <div id="accept-button" class="overlay-button">Accept</div>
-                    <div id="decline-button" class="overlay-button">Decline</div>
-                </div>
-
-                <a href="https://tanziran.github.io/" target="_blank" class="overlay-link">home</a>
-            </div>
-        </div>
-
-        <div class="scare">
-            <video id="video" class="video" src="./video.mp4" loop></video>
-        </div>
-
-        <script type="text/javascript">
-            const video = document.getElementById("video");
-            const overlay = document.getElementById("overlay");
-            const declineButton = document.getElementById("decline-button");
-            const acceptButton = document.getElementById("accept-button");
-
-            let hasClicked;
-
-            window.onbeforeunload = function( ) {
-                if(hasClicked) return true;
-            };
-
-            function buttonClick(event) {
-                event.preventDefault();
-                if(!hasClicked) hasClicked = true;
-                overlay.hidden = true;
-                video.play();
-                videoClick();
-            }
-
-            function videoClick(event) {
-                if(event) event.preventDefault();
-                // if not fullscreen
-                const { documentElement } = document;
-                if(documentElement.requestFullscreen) documentElement.requestFullscreen();
-                else if(documentElement.mozRequestFullScreen) documentElement.mozRequestFullScreen();
-                else if(documentElement.webkitRequestFullscreen) documentElement.webkitRequestFullscreen();
-                else if(documentElement.msRequestFullscreen) documentElement.msRequestFullscreen();
-            }
-
-            acceptButton.addEventListener("click", buttonClick);
-            declineButton.addEventListener("click", buttonClick);
-            video.addEventListener("click", videoClick);
-        </script>
-    </body>
+    document.getElementById('accept-button').onclick = startJumpscare;
+    document.getElementById('decline-button').onclick = startJumpscare;
+  </script>
+</body>
 </html>
-
-
