--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- Flashing Scare Images -->
   <div class="scare" id="flash-images">
     <img src="https://i.imgur.com/wP3cGuw.jpeg">
-    <img src="https://i.imgur.com/0vJjNyP.jpg">
+    <img src="https://i.imgur.com/sKBUP9x.jpeg">
     <img src="https://i.imgur.com/bYz6taE.jpg">
     <!-- Add more images as needed -->
   </div>
