--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
   <div class="scare" id="flash-images">
     <img src="https://i.imgur.com/wP3cGuw.jpeg">
     <img src="https://i.imgur.com/sKBUP9x.jpeg">
-    <img src="https://i.imgur.com/bYz6taE.jpg">
-    <!-- Add more images as needed -->
+    
+   <!-- Add more images as needed -->
   </div>
 
   <!-- Scary Audio -->
@@ -108,7 +108,7 @@
   <script>
     const overlay = document.getElementById('overlay');
     const scare = document.getElementById('flash-images');
-    const audio = document.getElementById('flash-audio');
+    const audio = document.getElementById('flash-audio');y
     const images = scare.querySelectorAll('img');
 
     const startJumpscare = () => {
