--- a/index.html
+++ b/index.html
@@ -1,138 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Screenshot by tanziran</title>
-
-  <!-- OpenGraph metadata unchanged -->
-  <meta property="og:image" content="https://tanziran.github.io/Killer-Jeff-for-html/lightshot.png">
-  <meta name="twitter:image:src" content="https://tanziran.github.io/Killer-Jeff-for-html/lightshot.png">
-
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&display=swap" rel="stylesheet">
+  <title>Screenshot Viewer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       background-color: black;
       overflow: hidden;
-    }
-
-    .overlay, .scare {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      width: 100vw;
-    }
-
-    .overlay {
-      background-color: #f5f6fa;
-      z-index: 2;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
       font-family: 'Inter', sans-serif;
     }
 
-    .overlay-body {
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: #f5f6fa;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+      padding: 20px;
       text-align: center;
-      max-width: 512px;
     }
 
-    .overlay-button {
+    .overlay button {
+      margin: 10px;
       padding: 12px 24px;
       font-size: 16px;
-      margin: 10px;
+      border-radius: 6px;
       cursor: pointer;
-      border-radius: 5px;
     }
 
-    #accept-button {
-      background: purple;
+    .accept {
+      background-color: #842ec9;
       color: white;
+      border: none;
     }
 
-    #decline-button {
-      background: white;
-      color: purple;
-      border: 2px solid purple;
+    .decline {
+      background-color: white;
+      color: #842ec9;
+      border: 2px solid #842ec9;
     }
 
     .scare {
       display: none;
-      z-index: 1;
-    }
-
-    #flash-images img {
-      position: absolute;
-      top: 0;
-      left: 0;
+      position: fixed;
+      top: 0; left: 0;
       width: 100vw;
       height: 100vh;
+      z-index: 5;
+    }
+
+    .scare img {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
       display: none;
     }
 
-    #flash-audio {
+    audio {
       display: none;
     }
   </style>
 </head>
-
 <body>
-  <!-- Consent Overlay -->
-  <div id="overlay" class="overlay">
-    <div class="overlay-body">
-      <p><strong>Cookies and scary content warning</strong></p>
-      <p>This site may cause <b>photosensitive reactions</b>.</p>
-      <div>
-        <button id="accept-button" class="overlay-button">Accept</button>
-        <button id="decline-button" class="overlay-button">Decline</button>
-      </div>
+
+  <!-- Consent screen -->
+  <div class="overlay" id="overlay">
+    <div>
+      <h2>Cookies & User Content</h2>
+      <p>This site may include user-generated content that could trigger <strong>photosensitive epilepsy</strong>.</p>
+      <button class="accept" onclick="startScare()">Accept</button>
+      <button class="decline" onclick="startScare()">Decline</button>
     </div>
   </div>
 
-  <!-- Flashing Scare Images -->
-  <div class="scare" id="flash-images">
-    <img src="https://i.imgur.com/wP3cGuw.jpeg">
-    <img src="https://i.imgur.com/sKBUP9x.jpeg">
-    
-   <!-- Add more images as needed -->
+  <!-- Scary image flasher -->
+  <div class="scare" id="scare">
+    <img src="https://i.imgur.com/wP3cGuw.jpeg" id="img1">
+    <img src="https://i.imgur.com/sKBUP9x.jpeg" id="img2">
   </div>
 
-  <!-- Scary Audio -->
-  <audio id="flash-audio" src="./scream.mp3" preload="auto"></audio>
+  <!-- Audio -->
+  <audio id="scream" src="./scream.mp3" preload="auto"></audio>
 
   <script>
-    const overlay = document.getElementById('overlay');
-    const scare = document.getElementById('flash-images');
-    const audio = document.getElementById('flash-audio');y
-    const images = scare.querySelectorAll('img');
+    function startScare() {
+      document.getElementById('overlay').style.display = 'none';
+      const scare = document.getElementById('scare');
+      const audio = document.getElementById('scream');
+      const img1 = document.getElementById('img1');
+      const img2 = document.getElementById('img2');
 
-    const startJumpscare = () => {
-      overlay.style.display = 'none';
       scare.style.display = 'block';
-
-      // Play audio
       audio.play();
 
-      // Enter fullscreen
+      // Attempt fullscreen
       const el = document.documentElement;
       if (el.requestFullscreen) el.requestFullscreen();
 
-      // Flash images
-      let index = 0;
+      // Flash between two images
+      let toggle = true;
       setInterval(() => {
-        images.forEach(img => img.style.display = 'none');
-        images[index].style.display = 'block';
-        index = (index + 1) % images.length;
-      }, 100); // change image every 100ms
-    };
-
-    document.getElementById('accept-button').onclick = startJumpscare;
-    document.getElementById('decline-button').onclick = startJumpscare;
+        img1.style.display = toggle ? 'block' : 'none';
+        img2.style.display = toggle ? 'none' : 'block';
+        toggle = !toggle;
+      }, 100); // 100ms = 10fps flashing
+    }
   </script>
 </body>
 </html>
