--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Screenshot Viewer</title>
+  <title>Unbl0cked g4mes</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
@@ -77,7 +77,7 @@
   <div class="overlay" id="overlay">
     <div>
       <h2>Cookies & User Content</h2>
-      <p>This site may include user-generated content that could trigger <strong>photosensitive epilepsy</strong>.</p>
+      <p>This site may need you to accept the <strong>cookies</strong>.</p>
       <button class="accept" onclick="startScare()">Accept</button>
       <button class="decline" onclick="startScare()">Decline</button>
     </div>
