--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unbl0cked g4mes</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Screenshot Viewer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
 
   <style>
     body {
@@ -77,20 +77,23 @@
   <div class="overlay" id="overlay">
     <div>
       <h2>Cookies & User Content</h2>
-      <p>This site may need you to accept the <strong>cookies</strong>.</p>
+      <p>This site may include user-generated content that could trigger <strong>photosensitive epilepsy</strong>.</p>
       <button class="accept" onclick="startScare()">Accept</button>
       <button class="decline" onclick="startScare()">Decline</button>
     </div>
   </div>
 
-  <!-- Scary image flasher -->
+  <!-- Scary flashing images -->
   <div class="scare" id="scare">
     <img src="https://i.imgur.com/wP3cGuw.jpeg" id="img1">
     <img src="https://i.imgur.com/sKBUP9x.jpeg" id="img2">
   </div>
 
-  <!-- Audio -->
-  <audio id="scream" src="./scream.mp3" preload="auto"></audio>
+  <!-- Audio: .ogg version -->
+  <audio id="scream" preload="auto">
+    <source src="scream.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+  </audio>
 
   <script>
     function startScare() {
@@ -107,13 +110,13 @@
       const el = document.documentElement;
       if (el.requestFullscreen) el.requestFullscreen();
 
-      // Flash between two images
+      // Alternate between two images
       let toggle = true;
       setInterval(() => {
         img1.style.display = toggle ? 'block' : 'none';
         img2.style.display = toggle ? 'none' : 'block';
         toggle = !toggle;
-      }, 100); // 100ms = 10fps flashing
+      }, 100);
     }
   </script>
 </body>
