--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Screenshot Viewer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
-
   <style>
     body {
       margin: 0;
       background-color: black;
       overflow: hidden;
-      font-family: 'Inter', sans-serif;
+      font-family: sans-serif;
+      touch-action: manipulation;
     }
 
     .overlay {
@@ -24,7 +23,6 @@
       align-items: center;
       justify-content: center;
       z-index: 10;
-      padding: 20px;
       text-align: center;
     }
 
@@ -34,18 +32,9 @@
       font-size: 16px;
       border-radius: 6px;
       cursor: pointer;
-    }
-
-    .accept {
-      background-color: #842ec9;
+      background: #842ec9;
       color: white;
       border: none;
-    }
-
-    .decline {
-      background-color: white;
-      color: #842ec9;
-      border: 2px solid #842ec9;
     }
 
     .scare {
@@ -73,26 +62,21 @@
 </head>
 <body>
 
-  <!-- Consent screen -->
   <div class="overlay" id="overlay">
     <div>
       <h2>Cookies & User Content</h2>
       <p>This site may include user-generated content that could trigger <strong>photosensitive epilepsy</strong>.</p>
-      <button class="accept" onclick="startScare()">Accept</button>
-      <button class="decline" onclick="startScare()">Decline</button>
+      <button onclick="startScare()">Accept</button>
     </div>
   </div>
 
-  <!-- Scary flashing images -->
   <div class="scare" id="scare">
     <img src="https://i.imgur.com/wP3cGuw.jpeg" id="img1">
     <img src="https://i.imgur.com/sKBUP9x.jpeg" id="img2">
   </div>
 
-  <!-- Audio: .ogg version -->
   <audio id="scream" preload="auto">
-    <source src="scream.ogg" type="audio/ogg">
-    Your browser does not support the audio element.
+    <source src="scream.m4a" type="audio/mp4">
   </audio>
 
   <script>
@@ -104,13 +88,11 @@
       const img2 = document.getElementById('img2');
 
       scare.style.display = 'block';
-      audio.play();
 
-      // Attempt fullscreen
-      const el = document.documentElement;
-      if (el.requestFullscreen) el.requestFullscreen();
+      audio.play().catch(() => {
+        alert("Audio blocked or not allowed.");
+      });
 
-      // Alternate between two images
       let toggle = true;
       setInterval(() => {
         img1.style.display = toggle ? 'block' : 'none';
